--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <title>Title</title>
-    <link rel="stylesheet" href="src/"/>
+    <link rel="stylesheet" href="dist/css/main.css"/>
 </head>
 <body>
 
+<div class="container">
+    <header class="main-header">
+        <nav class="main-header__main-nav">
+            <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"></a>
+            <button class="main-nav__btn btn">Buy Now</button>
+            <img class="main-nav__burger-menu-tab" src="src/img/burger-menu-start-tab.png" alt="menu-image">
+        </nav>
+    </header>
+
+</div>
+
+
 </body>
+<script src="dist/js/script.js"></script>
 </html>
