готова-страница-хедера

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="wrapper">
     <header class="main-header">
         <nav class="main-header__main-nav">
             <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"></a>
@@ -20,6 +20,38 @@
 
 </div>
 
+<!----------Fork App---------------->
+<section class="front-header  text-sections-styling">
+    <h1 class="front-header__heading">Fork App</h1>
+    <p class="front-header__text">A Real Gamechanger In The World Of Web-Development</p>
+    <p class="front-header__version">V.2.8 FOR MAC AND WINDOWS</p>
+
+    <div class="download-subsection">
+        <button class="btn front-header--download-btn">Download For Free Now</button>
+        <p class="front-header__trial-period-text">Unlimited 30-Days Trial Period</p>
+    </div>
+
+</section>
+
+<section class="revolutionary-editor  text-sections-styling">
+    <h2 class="revolutionary-editor__heading">REVOLUTIONARY EDITOR</h2>
+    <p class="revolutionary-editor__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+    <div class="revolutionary-editor__btn-container">
+        <button class="btn-container__btn"></button>
+        <button class="btn-container__btn"></button>
+        <button class="btn-container__btn"></button>
+    </div>
+</section>
+<section class="what-you-get  text-sections-styling">
+    <h2 class="what-you-get__heading">Here is what you get</h2>
+
+</section>
+<section class="people-are-talking">
+
+</section>
+<section class="pricing">
+
+</section>
 
 </body>
 <script src="dist/js/script.js"></script>
