закончил свою часть по верстке

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-    <title>Title</title>
+    <title>Fork App</title>
     <link rel="stylesheet" href="dist/css/main.css"/>
 </head>
 <body>
@@ -20,7 +20,7 @@
 
 </div>
 
-<!----------Fork App---------------->
+<!----------Fork App Section---------------->
 <section class="front-header  text-sections-styling">
     <h1 class="front-header__heading">Fork App</h1>
     <p class="front-header__text">A Real Gamechanger In The World Of Web-Development</p>
@@ -30,29 +30,107 @@
         <button class="btn front-header--download-btn">Download For Free Now</button>
         <p class="front-header__trial-period-text">Unlimited 30-Days Trial Period</p>
     </div>
-
 </section>
 
-<section class="revolutionary-editor  text-sections-styling">
-    <h2 class="revolutionary-editor__heading">REVOLUTIONARY EDITOR</h2>
-    <p class="revolutionary-editor__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
-    <div class="revolutionary-editor__btn-container">
-        <button class="btn-container__btn"></button>
-        <button class="btn-container__btn"></button>
-        <button class="btn-container__btn"></button>
-    </div>
-</section>
-<section class="what-you-get  text-sections-styling">
-    <h2 class="what-you-get__heading">Here is what you get</h2>
+        <section class="revolutionary-editor container">
+            <h2 class="revolutionary-editor__heading">REVOLUTIONARY EDITOR</h2>
+            <p class="revolutionary-editor__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+            <div class="revolutionary-editor__btn-container">
+                <button class="btn-container__btn"></button>
+                <button class="btn-container__btn"></button>
+                <button class="btn-container__btn"></button>
+            </div>
+        </section>
+        <section class="what-you-get container">
+            <h2 class="what-you-get__heading">Here is what you get</h2>
+            <div class="what-you-get__card">
+                <img src="" alt="icon of a provided service" class="what-you-get__icon">
+                <h4 class="what-you-get__heading"></h4>
+                <p class="what-you-get__text"></p>
+            </div>
+            <div class="what-you-get__card">
+                <img src="" alt="icon of a provided service" class="what-you-get__icon">
+                <h4 class="what-you-get__heading"></h4>
+                <p class="what-you-get__text"></p>
+            </div>
+            <div class="what-you-get__card">
+                <img src="" alt="icon of a provided service" class="what-you-get__icon">
+                <h4 class="what-you-get__heading"></h4>
+                <p class="what-you-get__text"></p>
+            </div>
+            <div class="what-you-get__card">
+                <img src="" alt="icon of a provided service" class="what-you-get__icon">
+                <h4 class="what-you-get__heading"></h4>
+                <p class="what-you-get__text"></p>
+            </div>
+            <img src="" alt="editor image" class="wat-you-get__editor-img">
+        </section>
 
-</section>
-<section class="people-are-talking">
 
-</section>
-<section class="pricing">
-
-</section>
-
+        <section class="user-reviews container">
+            <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
+            <div class="user-reviews__card">
+                <img src="./src/img/8.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+            </div>
+            <div class="user-reviews__card">
+                <img src="./src/img/9.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.</p>
+            </div>
+            <div class="user-reviews__card">
+                <img src="./src/img/10.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. </p>
+            </div>
+            <div class="user-reviews__card">
+                <img src="./src/img/11.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+            </div>
+            <div class="user-reviews__card">
+                <img src="./src/img/12.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. </p>
+            </div>
+            <div class="user-reviews__card">
+                <img src="./src/img/13.png" alt="partner logo" class="user-reviews__img">
+                <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</p>
+            </div>
+            <p class="user-reviews__conclusion">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+        </section>
+        <section class="pricing container">
+            <h1 class="pricing__heading">Fork Subscription Pricing</h1>
+            <div class="pricing__card-container">
+                <div class="pricing__card">
+                    <h4 class="pricing__card__heading">STUDENTS</h4>
+                    <P class="pricing__card__price">$29</P>
+                    <p>PER MONTH</p>
+                    <p>Personal License</p>
+                    <button class="pricing__card__button">PURCHASE</button>
+                </div>
+                <div class="pricing__card">
+                    <h4 class="pricing__card__heading">PROFESSIONAL</h4>
+                    <P class="pricing__card__price">$59</P>
+                    <p>PER MONTH</p>
+                    <p>Professional License</p>
+                    <p>Email Support</p>
+                    <button class="pricing__card__button">PURCHASE</button>
+                </div>
+                <div class="pricing__card">
+                    <h4 class="pricing__card__heading">AGENCY</h4>
+                    <P class="pricing__card__price">$99</P>
+                    <p>PER MONTH</p>
+                    <p>1-12 Team Members</p>
+                    <p>Phone Support</p>
+                    <button class="pricing__card__button">PURCHASE</button>
+                </div>
+                <div class="pricing__card">
+                    <h4 class="pricing__card__heading">ENTERPRISE</h4>
+                    <P class="pricing__card__price">$159</P>
+                    <p>PER MONTH</p>
+                    <p>Unlimited Team Members</p>
+                    <p>24/7 Phone Support</p>
+                    <button class="pricing__card__button">PURCHASE</button>
+                </div>
+            </div>
+        </section>
 </body>
 <script src="dist/js/script.js"></script>
 </html>
