--- a/index.html
+++ b/index.html
@@ -11,10 +11,36 @@
 
 <div class="wrapper">
     <header class="main-header">
-        <nav class="main-header__main-nav">
+        <!-- Меню для Смартфонов -->
+        <nav class="main-header__nav-mobile">
             <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"></a>
             <button class="main-nav__btn btn">Buy Now</button>
             <img class="main-nav__burger-menu-tab" src="src/img/burger-menu-start-tab.png" alt="menu-image">
+        </nav>
+        <!-- Меню для Планшетов -->
+        <div class="main-header__nav-tablet">
+            <nav class="main-header__nav-tablet-first">
+                <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
+                <button class="main-nav__btn btn">Buy Now</button>
+            </nav>
+            <menu class="main-header__nav-tablet-second">
+                <li class="main-header__menu-items">Overview</li>
+                <li class="main-header__menu-items">About Fork</li>
+                <li class="main-header__menu-items">Buying Options</li>
+                <li class="main-header__menu-items">Support</li>
+            </menu>
+        </div>
+        <!-- Меню для десктопов -->
+        <nav class="main-header__nav-LG">
+            <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
+            <menu class="main-header__menu-LG">
+                <li class="main-header__menu-items">Overview</li>
+                <li class="main-header__menu-items">About Fork</li>
+                <li class="main-header__menu-items">Buying Options</li>
+                <li class="main-header__menu-items">Support</li>
+                <li class="main-header__menu-items"><button class="main-nav__btn btn">Buy Now</button></li>
+            </menu>
+
         </nav>
     </header>
 
@@ -69,32 +95,41 @@
 
         <section class="user-reviews container">
             <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
-            <div class="user-reviews__card">
-                <img src="./src/img/8.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
-            </div>
-            <div class="user-reviews__card">
-                <img src="./src/img/9.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum, rhoncus molestie neque ac, mollis eleifend nibh.</p>
-            </div>
-            <div class="user-reviews__card">
-                <img src="./src/img/10.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. </p>
-            </div>
-            <div class="user-reviews__card">
-                <img src="./src/img/11.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet. Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
-            </div>
-            <div class="user-reviews__card">
-                <img src="./src/img/12.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa. Nulla faucibus lorem id arcu consequat faucibus. </p>
-            </div>
-            <div class="user-reviews__card">
-                <img src="./src/img/13.png" alt="partner logo" class="user-reviews__img">
-                <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</p>
+            <div class="user-reviews__container">
+                <div class="user-reviews__card">
+                    <img src="./src/img/8.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet.
+                        Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+                </div>
+                <div class="user-reviews__card">
+                    <img src="./src/img/9.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">Donec euismod dolor ut ultricies consequat. Vivamus urna ipsum,
+                        rhoncus molestie neque ac, mollis eleifend nibh.</p>
+                </div>
+                <div class="user-reviews__card">
+                    <img src="./src/img/10.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">In efficitur in velit et tempus. Duis nec odio dapibus, suscipit erat
+                        fringilla, imperdiet nibh. Morbi tempus auctor felis ac vehicula. </p>
+                </div>
+                <div class="user-reviews__card">
+                    <img src="./src/img/11.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">Sed vestibulum scelerisque urna, eu finibus leo facilisis sit amet.
+                        Proin id dignissim magna. Sed varius urna et pulvinar venenatis. </p>
+                </div>
+                <div class="user-reviews__card">
+                    <img src="./src/img/12.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">Praesent ut eros tristique, malesuada lectus vel, lobortis massa.
+                        Nulla faucibus lorem id arcu consequat faucibus. </p>
+                </div>
+                <div class="user-reviews__card">
+                    <img src="./src/img/13.png" alt="partner logo" class="user-reviews__img">
+                    <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis.
+                        Pellentesque porttitor cursus massa et vestibulum.</p>
+                </div>
             </div>
             <p class="user-reviews__conclusion">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
         </section>
+
         <section class="pricing container">
             <h1 class="pricing__heading">Fork Subscription Pricing</h1>
             <div class="pricing__card-container">
