доработаны до полного функционала все вариации менюшек, включая нужный функционал по-ховеру

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
                 <button class="main-nav__btn btn">Buy Now</button>
             </nav>
             <menu class="main-header__nav-tablet-second">
-                <li class="main-header__menu-items">Overview</li>
-                <li class="main-header__menu-items">About Fork</li>
-                <li class="main-header__menu-items">Buying Options</li>
-                <li class="main-header__menu-items">Support</li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href" href="#">Overview</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">About Fork</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Buying Options</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Support</a></li>
             </menu>
         </div>
         <!-- Меню для десктопов -->
         <nav class="main-header__nav-LG">
             <a href="#"><img class="main-nav__logo" src="src/img/main-nav__logo.png" alt="logo"><span class="main-nav__forkio-logo"> FORKIO</span></a>
             <menu class="main-header__menu-LG">
-                <li class="main-header__menu-items">Overview</li>
-                <li class="main-header__menu-items">About Fork</li>
-                <li class="main-header__menu-items">Buying Options</li>
-                <li class="main-header__menu-items">Support</li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Overview</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">About Fork</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Buying Options</a></li>
+                <li class="main-header__menu-items"><a class="main-header__menu-items-href"  href="#">Support</a></li>
                 <li class="main-header__menu-items"><button class="main-nav__btn btn">Buy Now</button></li>
             </menu>
 
