--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <ul class="revolutionary-editor__btn-container">
             <li class="revolutionary-editor__btn">
                 <span class="revolutionary-editor__btn_left">
-                    <img src="./src/img/eye.svg" alt="github icon" class="revolutionary-editor__btn__icon">
+                    <img src="./dist/img/eye.svg" alt="github icon" class="revolutionary-editor__btn__icon">
                     Watch
                 </span>
                 <span class="revolutionary-editor__btn_right">1,397</span>
             </li>
             <li class="revolutionary-editor__btn">
                 <span class="revolutionary-editor__btn_left">
-                    <img src="./src/img/star.svg" alt="github icon" class="revolutionary-editor__btn__icon">
+                    <img src="./dist/img/star.svg" alt="github icon" class="revolutionary-editor__btn__icon">
                     Star
                 </span>
                 <span class="revolutionary-editor__btn_right">21,038</span>
             </li>
             <li class="revolutionary-editor__btn">
                 <span class="revolutionary-editor__btn_left">
-                    <img src="./src/img/fork.svg" alt="github icon" class="revolutionary-editor__btn__icon">
+                    <img src="./dist/img/fork.svg" alt="github icon" class="revolutionary-editor__btn__icon">
                     Fork
                 </span>
                 <span class="revolutionary-editor__btn_right">4,391</span>
@@ -56,34 +56,42 @@
     <section class="what-you-get container">
         <h2 class="what-you-get__heading">Here is what you get</h2>
         <div class="what-you-get__card">
-            <img src="./src/img/icon1.png" alt="icon of a provided service" width="111px" height="64px" class="what-you-get__icon card__flex-item goright">
+            <div class="what-you-get__card__icon goright">
+                <img src="./dist/img/icon1.png" alt="icon of a provided service" width="111px" height="64px">
+            </div>
             <div class="card__flex-item">
                 <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
                 <p class="what-you-get__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
             </div>
         </div>
         <div class="what-you-get__card">
-            <img src="./src/img/icon2.png" alt="icon of a provided service"width="90px" height="80px" class="what-you-get__icon card__flex-item">
+            <div class="what-you-get__card__icon">
+                <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px">
+            </div>
             <div class="card__flex-item">
                 <h4 class="what-you-get__subheading">Incredibly Powerful Tool</h4>
                 <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
             </div>
         </div>
         <div class="what-you-get__card">
-            <img src="./src/img/icon3.png" alt="icon of a provided service"width="60px" height="84px" class="what-you-get__icon card__flex-item">
+            <div class="what-you-get__card__icon">
+                <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px">
+            </div>
             <div class="card__flex-item">
                 <h4 class="what-you-get__subheading">Experimental Stuff</h4>
                 <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
             </div>
         </div>
         <div class="what-you-get__card">
-            <img src="./src/img/icon4.png" alt="icon of a provided service"width="71px" height="71px" class="what-you-get__icon card__flex-item">
+            <div class="what-you-get__card__icon">
+                <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px">
+            </div>
             <div class="card__flex-item">
                 <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
                 <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
             </div>
         </div>
-        <img src="./src/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
+        <img src="./dist/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
     </section>
     <!-- <section class="user-reviews_container">
         <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
@@ -112,42 +120,42 @@
             <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</p>
         </div>
         <p class="user-reviews__conclusion">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-    </section>
-    <section class="pricing_container">
+    </section> -->
+    <section class="pricing container">
         <h1 class="pricing__heading">Fork Subscription Pricing</h1>
         <div class="pricing__card-container">
             <div class="pricing__card">
                 <h4 class="pricing__card__heading">STUDENTS</h4>
                 <P class="pricing__card__price">$29</P>
-                <p>PER MONTH</p>
-                <p>Personal License</p>
+                <p class="pricing__card__per-month line-after">PER MONTH</p>
+                <p class="pricing__card__description">Personal License</p>
                 <button class="pricing__card__button">PURCHASE</button>
             </div>
             <div class="pricing__card">
                 <h4 class="pricing__card__heading">PROFESSIONAL</h4>
                 <P class="pricing__card__price">$59</P>
-                <p>PER MONTH</p>
-                <p>Professional License</p>
-                <p>Email Support</p>
+                <p class="pricing__card__per-month line-after">PER MONTH</p>
+                <p class="pricing__card__description">Professional License</p>
+                <p class="pricing__card__description">Email Support</p>
                 <button class="pricing__card__button">PURCHASE</button>
             </div>
-            <div class="pricing__card">
-                <h4 class="pricing__card__heading">AGENCY</h4>
-                <P class="pricing__card__price">$99</P>
-                <p>PER MONTH</p>
-                <p>1-12 Team Members</p>
-                <p>Phone Support</p>
-                <button class="pricing__card__button">PURCHASE</button>
+            <div class="pricing__card card-bigger">
+                <h4 class="card-bigger__heading">AGENCY</h4>
+                <P class="card-bigger__price">$99</P>
+                <p class="pricing__card__per-month line-after">PER MONTH</p>
+                <p class="pricing__card__description">1-12 Team Members</p>
+                <p class="pricing__card__description">Phone Support</p>
+                <button class="card-bigger__button">PURCHASE</button>
             </div>
             <div class="pricing__card">
                 <h4 class="pricing__card__heading">ENTERPRISE</h4>
                 <P class="pricing__card__price">$159</P>
-                <p>PER MONTH</p>
-                <p>Unlimited Team Members</p>
-                <p>24/7 Phone Support</p>
+                <p class="pricing__card__per-month line-after">PER MONTH</p>
+                <p class="pricing__card__description">Unlimited Team Members</p>
+                <p class="pricing__card__description">24/7 Phone Support</p>
                 <button class="pricing__card__button">PURCHASE</button>
             </div>
         </div>
     </section>
 </body>
-</html> -->
+</html>
