Завершён функционал адаптивности моей части проекта. Приведены в порядок шрифты. Создан дополнительный скрипт переключения классами по медиа-запросам. Готов к слиянию в общий проект

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 
 <!----------Fork App Section---------------->
-<section class="front-header  text-sections-styling">
+<section class="front-header  front-header--mobile-mode  text-sections-styling">
     <h1 class="front-header__heading">Fork App</h1>
     <p class="front-header__text">A Real Gamechanger In The World Of Web-Development</p>
     <p class="front-header__version">V.2.8 FOR MAC AND WINDOWS</p>
@@ -93,7 +93,7 @@
         </section>
 
 
-        <section class="user-reviews container">
+        <section class="user-reviews">
             <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
             <div class="user-reviews__container">
                 <div class="user-reviews__card">
