--- a/index.html
+++ b/index.html
@@ -55,43 +55,48 @@
     </section>
     <section class="what-you-get container">
         <h2 class="what-you-get__heading">Here is what you get</h2>
-        <div class="what-you-get__card">
-            <div class="what-you-get__card__icon goright">
-                <img src="./dist/img/icon1.png" alt="icon of a provided service" width="111px" height="64px">
+        <div class="what-you-get__card-container">
+            <div class="what-you-get__card">
+                <div class="what-you-get__card__icon goright">
+                    <img src="./dist/img/icon1.png" alt="icon of a provided service" width="111px" height="64px">
+                </div>
+                <div class="card__flex-item">
+                    <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
+                    <p class="what-you-get__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+                </div>
             </div>
-            <div class="card__flex-item">
-                <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
-                <p class="what-you-get__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
+            <div class="what-you-get__card">
+                <div class="what-you-get__card__icon">
+                    <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px">
+                </div>
+                <div class="card__flex-item">
+                    <h4 class="what-you-get__subheading">Incredibly Powerful Tool</h4>
+                    <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                </div>
+            </div>
+            <div class="what-you-get__card">
+                <div class="what-you-get__card__icon">
+                    <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px">
+                </div>
+                <div class="card__flex-item">
+                    <h4 class="what-you-get__subheading">Experimental Stuff</h4>
+                    <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                </div>
+            </div>
+            <div class="what-you-get__card">
+                <div class="what-you-get__card__icon">
+                    <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px">
+                </div>
+                <div class="card__flex-item">
+                    <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
+                    <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
+                </div>
             </div>
         </div>
-        <div class="what-you-get__card">
-            <div class="what-you-get__card__icon">
-                <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px">
-            </div>
-            <div class="card__flex-item">
-                <h4 class="what-you-get__subheading">Incredibly Powerful Tool</h4>
-                <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
-            </div>
+        <div>
+            <h2 class="what-you-get__heading flex-2-1200">Here is what you get</h2>
+            <img src="./dist/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
         </div>
-        <div class="what-you-get__card">
-            <div class="what-you-get__card__icon">
-                <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px">
-            </div>
-            <div class="card__flex-item">
-                <h4 class="what-you-get__subheading">Experimental Stuff</h4>
-                <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
-            </div>
-        </div>
-        <div class="what-you-get__card">
-            <div class="what-you-get__card__icon">
-                <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px">
-            </div>
-            <div class="card__flex-item">
-                <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
-                <p class="what-you-get__text">Maecenas eu dictum felis, a dignissim nibh. Mauris rhoncus felis odio, ut volutpat massa placerat ac. Curabitur dapibus iaculis mi gravida luctus. Aliquam erat volutpat. </p>
-            </div>
-        </div>
-        <img src="./dist/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
     </section>
     <!-- <section class="user-reviews_container">
         <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
