final version before merge

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
         <div>
-            <h2 class="what-you-get__heading flex-2-1200">Here is what you get</h2>
+            <h2 class="what-you-get__heading after1200px">Here is what you get</h2>
             <img src="./dist/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
         </div>
     </section>
@@ -134,7 +134,7 @@
                 <P class="pricing__card__price">$29</P>
                 <p class="pricing__card__per-month line-after">PER MONTH</p>
                 <p class="pricing__card__description">Personal License</p>
-                <button class="pricing__card__button">PURCHASE</button>
+                <button class="pricing__card__button golower">PURCHASE</button>
             </div>
             <div class="pricing__card">
                 <h4 class="pricing__card__heading">PROFESSIONAL</h4>
