--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="what-you-get__card-container">
             <div class="what-you-get__card">
                 <div class="what-you-get__card__icon goright">
-                    <img src="./dist/img/icon1.png" alt="icon of a provided service" width="111px" height="64px">
+                    <img src="./dist/img/icon1.png" alt="icon of a provided service" width="111px" height="64px" class="what-you-get__card__icon__img">
                 </div>
                 <div class="card__flex-item">
                     <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
@@ -67,7 +67,7 @@
             </div>
             <div class="what-you-get__card">
                 <div class="what-you-get__card__icon">
-                    <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px">
+                    <img src="./dist/img/icon2.png" alt="icon of a provided service"width="90px" height="80px" class="what-you-get__card__icon__img">
                 </div>
                 <div class="card__flex-item">
                     <h4 class="what-you-get__subheading">Incredibly Powerful Tool</h4>
@@ -76,7 +76,7 @@
             </div>
             <div class="what-you-get__card">
                 <div class="what-you-get__card__icon">
-                    <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px">
+                    <img src="./dist/img/icon3.png" alt="icon of a provided service"width="60px" height="84px" class="what-you-get__card__icon__img">
                 </div>
                 <div class="card__flex-item">
                     <h4 class="what-you-get__subheading">Experimental Stuff</h4>
@@ -85,7 +85,7 @@
             </div>
             <div class="what-you-get__card">
                 <div class="what-you-get__card__icon">
-                    <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px">
+                    <img src="./dist/img/icon4.png" alt="icon of a provided service"width="71px" height="71px" class="what-you-get__card__icon__img">
                 </div>
                 <div class="card__flex-item">
                     <h4 class="what-you-get__subheading">Creatred to Make The Web Better</h4>
