--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>forkio</title>
 </head>
 <body>
-    <!-- <header class="main-header">
+    <header class="main-header">
         <nav class="main-header__main-nav">
             <a href="#" class="main-nav__logo"></a>
             <button class="main-nav__btn">Buy Now</button>
@@ -25,7 +25,7 @@
                 <p class="download-container__text"></p>
             </div>
         </section>
-    </header> -->
+    </header>
     <section class="revolutionary-editor container">
         <h2 class="revolutionary-editor__heading">REVOLUTIONARY EDITOR</h2>
         <p class="revolutionary-editor__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
@@ -98,7 +98,7 @@
             <img src="./dist/img/editor.png" alt="editor image" class="wat-you-get__editor-img">
         </div>
     </section>
-    <!-- <section class="user-reviews_container">
+    <section class="user-reviews_container">
         <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
         <div class="user-reviews__card">
             <img src="" alt="partner logo" class="user-reviews__img">
@@ -125,7 +125,7 @@
             <p class="user-reviews__text">Fusce pharetra erat id odio blandit, nec pharetra eros venenatis. Pellentesque porttitor cursus massa et vestibulum.</p>
         </div>
         <p class="user-reviews__conclusion">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-    </section> -->
+    </section>
     <section class="pricing container">
         <h1 class="pricing__heading">Fork Subscription Pricing</h1>
         <div class="pricing__card-container">
