pre- merge version from Ryabushkin

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!---------------------- хедер Рябушкина ------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="dist/css/main.css"/>
 </head>
 <body>
-
+<!---------------------- первая часть (из 3х частей) Рябушкина: МЕНЮШКИ.  ------------------------------------->
 <div class="wrapper">
     <header class="main-header">
         <!-- Меню для Смартфонов -->
@@ -45,8 +46,8 @@
     </header>
 
 </div>
-
-<!----------Fork App Section---------------->
+<!---------------------- вторая часть (из 3х ) Рябушкина: секция Fork App (хедер) ------------------------------------->
+<!---Fork App Section--->
 <section class="front-header  front-header--mobile-mode  text-sections-styling">
     <h1 class="front-header__heading">Fork App</h1>
     <p class="front-header__text">A Real Gamechanger In The World Of Web-Development</p>
@@ -57,42 +58,7 @@
         <p class="front-header__trial-period-text">Unlimited 30-Days Trial Period</p>
     </div>
 </section>
-
-        <section class="revolutionary-editor container">
-            <h2 class="revolutionary-editor__heading">REVOLUTIONARY EDITOR</h2>
-            <p class="revolutionary-editor__text">Aenean cursus imperdiet nisl id fermentum. Aliquam pharetra dui laoreet vulputate dignissim. Sed id metus id quam auctor molestie eget ut augue.</p>
-            <div class="revolutionary-editor__btn-container">
-                <button class="btn-container__btn"></button>
-                <button class="btn-container__btn"></button>
-                <button class="btn-container__btn"></button>
-            </div>
-        </section>
-        <section class="what-you-get container">
-            <h2 class="what-you-get__heading">Here is what you get</h2>
-            <div class="what-you-get__card">
-                <img src="" alt="icon of a provided service" class="what-you-get__icon">
-                <h4 class="what-you-get__heading"></h4>
-                <p class="what-you-get__text"></p>
-            </div>
-            <div class="what-you-get__card">
-                <img src="" alt="icon of a provided service" class="what-you-get__icon">
-                <h4 class="what-you-get__heading"></h4>
-                <p class="what-you-get__text"></p>
-            </div>
-            <div class="what-you-get__card">
-                <img src="" alt="icon of a provided service" class="what-you-get__icon">
-                <h4 class="what-you-get__heading"></h4>
-                <p class="what-you-get__text"></p>
-            </div>
-            <div class="what-you-get__card">
-                <img src="" alt="icon of a provided service" class="what-you-get__icon">
-                <h4 class="what-you-get__heading"></h4>
-                <p class="what-you-get__text"></p>
-            </div>
-            <img src="" alt="editor image" class="wat-you-get__editor-img">
-        </section>
-
-
+<!---------------------- третья часть (из 3х) Рябушкина: секция user-reviews (отзывы) ------------------------------------->
         <section class="user-reviews">
             <h1 class="user-reviews__heading">People Are Talking About Fork</h1>
             <div class="user-reviews__container">
@@ -129,43 +95,7 @@
             </div>
             <p class="user-reviews__conclusion">Duis lobortis arcu sed arcu tincidunt feugiat. Nulla nisi mauris, facilisis vitae aliquet id, imperdiet quis nibh. Donec eget elit eu libero tincidunt consequat nec elementum orci. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
         </section>
-
-        <section class="pricing container">
-            <h1 class="pricing__heading">Fork Subscription Pricing</h1>
-            <div class="pricing__card-container">
-                <div class="pricing__card">
-                    <h4 class="pricing__card__heading">STUDENTS</h4>
-                    <P class="pricing__card__price">$29</P>
-                    <p>PER MONTH</p>
-                    <p>Personal License</p>
-                    <button class="pricing__card__button">PURCHASE</button>
-                </div>
-                <div class="pricing__card">
-                    <h4 class="pricing__card__heading">PROFESSIONAL</h4>
-                    <P class="pricing__card__price">$59</P>
-                    <p>PER MONTH</p>
-                    <p>Professional License</p>
-                    <p>Email Support</p>
-                    <button class="pricing__card__button">PURCHASE</button>
-                </div>
-                <div class="pricing__card">
-                    <h4 class="pricing__card__heading">AGENCY</h4>
-                    <P class="pricing__card__price">$99</P>
-                    <p>PER MONTH</p>
-                    <p>1-12 Team Members</p>
-                    <p>Phone Support</p>
-                    <button class="pricing__card__button">PURCHASE</button>
-                </div>
-                <div class="pricing__card">
-                    <h4 class="pricing__card__heading">ENTERPRISE</h4>
-                    <P class="pricing__card__price">$159</P>
-                    <p>PER MONTH</p>
-                    <p>Unlimited Team Members</p>
-                    <p>24/7 Phone Support</p>
-                    <button class="pricing__card__button">PURCHASE</button>
-                </div>
-            </div>
-        </section>
+<!---------------------- конец всех секций Рябушкина ------------------------------------->
 </body>
 <script src="dist/js/script.js"></script>
 </html>
